atkobject: Stop to manage SELECTABLE/SELECTED states at AtkObject

https://bugzilla.gnome.org/show_bug.cgi?id=689907